devops/kubernetes/assesment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assesment
spec:
  rules:
    - host: assesment-devops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: assesment
                port:
                  number: 80
